added todo to write filenames to statslog.csv and to note errors

--- a/TODO
+++ b/TODO
@@ -29,3 +29,4 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 	  add more tests.
 	  Testframework executed by dpkg-buildpackage.
 * marco Change ${vars} to $vars
+* tinu  write filename to statslog.csv and note errors
