--- a/TODO
+++ b/TODO
@@ -22,20 +22,21 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 	  Testframework executed by dpkg-buildpackage.
 * marco stats, processed songs per hour
 * marco logging(): no warning output's, if no -v (verbose) is selected
+* tinu  remove DOUBLEDIR, use statslog.csv instead
+* tinu  write filename to statslog.csv and note errors
+* tinu  make origdir optional
+* tinu  give marco info about source of test songs
+* marco check license of songs and document if needed in copyrights
+* tinu  complete fileprocessing test in testframework
 
 # --- later --------------------------------------------------------------------
 * tinu  change to getopt(1) to be able to parse --long-options
 * tinu  cross correlation with well known ad files
 * tinu  maybe we could use ffmpeg instead of sox/lame 
 * team  statistics reporting
-* tinu  remove DOUBLEDIR, use statslog.csv instead
-* tinu  write filename to statslog.csv and note errors
 * tinu  wishlist: put a file in $fadecuthome with a list of artist/titles
           start fadecut with special option (-w for example) and fadecut
           will rip/process only files which are on the wishlist.
           this should work with many fadecut processes in parallel, to scan on
           many internet-radio stations in parallel to complete the wishlist as
           fast as possible
-* tinu  make origdir optional
-* tinu  give marco info about source of test songs
-* marco check license of songs and document if needed in copyrights
