--- a/TODO
+++ b/TODO
@@ -29,6 +29,9 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 * tinu  complete fileprocessing test in testframework
 * tinu  how to handle case of tags? camel, higher or lowercase?
         decide and code it
+* tinu  how to handle filenames like this: 
+        Gloria Estefan - 1 - 2 - 3.mp3 / gloria_estefan_-_1_-_2_-_3.mp3
+        PLATINUM - SIGNALS(GAUDINO & ROONEY EDIT).mp3 / platinum_-_signals(gaudino_&_rooney_edit).mp3 (for example put an underscore before paranthesis)
 
 # --- later --------------------------------------------------------------------
 * tinu  change to getopt(1) to be able to parse --long-options
