--- a/TODO
+++ b/TODO
@@ -14,6 +14,9 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License               
 along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 
+
+# --- bugs on master branch ----------------------------------------------------
+* New/ already exists recognition is broken, if destination files are ogg's
 # --- 0.2.0 release ------------------------------------------------------------
 * marco Change ${vars} to $vars
 * marco Testframework:
