todo fix characterset for id3 tags

--- a/TODO
+++ b/TODO
@@ -59,4 +59,5 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 * team  define constant with version of fadecut
 * team  lyrics in tags
 * team  song/album title
+* tinu  id3 tags umlaut are not correct on N900, wrong characterset
 
