corrected changed parameter of fadecut for ripping

--- a/README
+++ b/README
@@ -89,6 +89,6 @@ Edit variables:
  FADE_OUT=4
 
 2. Let's stream, rip and automatically fade & cut now
-fadecut -p myradiostation -s
+fadecut -p myradiostation -r
 
 3. man fadecut
