--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fadecut (0.1.0-2) unstable; urgency=low
+
+  * Update debian/copyright: Fix lintian warning
+
+ -- Marco Balmer <marco@balmer.name>  Tue, 11 Oct 2011 11:48:27 +0200
+
 fadecut (0.1.0-1) unstable; urgency=low
 
   * New 0.1.0 upstream release
