--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+fadecut 0.1.1
+-------------
+
+ * Exeption handling (Closes debian bug: #645392)
+
 fadecut 0.1.0
 -------------
   * ripping option -s changed to -r
