--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fadecut (0.1.1-1) unstable; urgency=low
+
+  * New 0.1.1 upstrem release (Closes: #645392)
+
+ -- Marco Balmer <marco@balmer.name>  Mon, 17 Oct 2011 14:07:19 +0200
+
 fadecut (0.1.0-2) unstable; urgency=low
 
   * Update debian/copyright: Fix lintian warning
