--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ fadecut (0.1.2-1) unstable; urgency=low
 
   * New 0.1.2 upstream release 
   * Closes github issue https://github.com/micressor/fadecut/issues/1
+  * Update debian/control: Standards-Version: 3.9.4
 
  -- Marco Balmer <marco@balmer.name>  Wed, 27 Feb 2013 11:49:57 +0100
 
