add var: customize streamripper's USER_AGENT

--- a/fadecut.1
+++ b/fadecut.1
@@ -132,6 +132,11 @@ FADE_OUT=4
 .RS
 Fade out for <n> seconds.
 .RE
+.PP
+USER_AGENT="Streamripper/1.x"
+.RS
+Set the user-agent used by streamripper
+.RE
 .SH EXAMPLES
 Create a new ripping profile
 .RS
