--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+fadecut (0.1.3-1) unstable; urgency=low
+
+  * New 0.1.3 upstream release
+  * Closes #2 at github: "add custom USER_AGENT" Thanks to mitsukarenai.
+  * fadecut 0.1.2-1 was only in experimental and goes to unstable now.
+
+ -- Marco Balmer <marco@balmer.name>  Fri, 22 Mar 2013 10:16:57 +0100
+
 fadecut (0.1.2-1) experimental; urgency=low
 
   * New 0.1.2 upstream release 
