Link to ubuntuusers.de documentation.

--- a/README
+++ b/README
@@ -104,3 +104,9 @@ Edit variables:
 fadecut -p myradiostation -r
 
 3. man fadecut
+
+--- More useful documentation --------------------------------------------------
+
+You may find it at:
+
+  http://wiki.ubuntuusers.de/fadecut
