--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fadecut (0.1.5-2) UNRELEASED; urgency=medium
+
+  * New 0.1.X upstream release
+
+ -- Marco Balmer <marco@balmer.name>  Wed, 30 Sep 2015 16:15:00 +0200
+
 fadecut (0.1.4-1) unstable; urgency=low
 
   * New 0.1.4 upstream release
