--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 fadecut (0.1.5-2) UNRELEASED; urgency=medium
 
   * New 0.1.X upstream release
+  * Standards bumped to 3.9.6
 
  -- Marco Balmer <marco@balmer.name>  Wed, 30 Sep 2015 16:15:00 +0200
 
