--- a/debian/changelog
+++ b/debian/changelog
@@ -3,9 +3,10 @@ fadecut (0.1.5-1) UNRELEASED; urgency=low
   * New 0.1.5 upstream release
   * Standards bumped to 3.9.6
   * Add pandoc to build-depends
-  * Add opus-tools to package depends
+  * Add opus-tools to depends
+  * Add gzip to build-depends
 
- -- Marco Balmer <marco@balmer.name>  Wed, 30 Sep 2015 16:15:00 +0200
+ -- Marco Balmer <marco@balmer.name>  Fri, 11 Dec 2015 08:51:33 +0100
 
 fadecut (0.1.4-1) unstable; urgency=low
 
