Replace with new github url

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-fadecut (0.1.5-3) UNRELEASED; urgency=low
+fadecut (0.1.5-4) UNRELEASED; urgency=low
 
   * New 0.1.5 upstream release
   * Standards bumped to 3.9.6
@@ -7,8 +7,9 @@ fadecut (0.1.5-3) UNRELEASED; urgency=low
   * Add gzip to build-depends
   * Add mediainfo to depends
   * Change watch-file url
+  * Replace with new github url
 
- -- Marco Balmer <marco@balmer.name>  Tue, 15 Dec 2015 11:29:21 +0100
+ -- Marco Balmer <marco@balmer.name>  Tue, 15 Dec 2015 14:32:44 +0100
 
 fadecut (0.1.4-1) unstable; urgency=low
 
