--- a/debian/changelog
+++ b/debian/changelog
@@ -9,16 +9,23 @@ fadecut (0.2.0-1) unstable; urgency=low
   * Change watch-file url
   * Replace with new Vcs-Git to github url
 
- -- Marco Balmer <marco@balmer.name>  Thu, 23 Mar 2017 08:02:14 +0100
+ -- Marco Balmer <marco@balmer.name>  Sat, 22 Apr 2017 11:50:15 +0000
 
-fadecut (0.1.4-1) unstable; urgency=low
+fadecut (0.1.4-1.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Upload into unstable
+
+ -- Anton Gladky <gladk@debian.org>  Tue, 05 May 2015 21:45:55 +0200
+
+fadecut (0.1.4-1~exp1) experimental; urgency=low
 
   * New 0.1.4 upstream release
+  * Standards bumped to 3.9.6
   * Closes pull request #5 at github.com
-  * Standards bumped to 3.9.5
   * Fix lintian warnings in debian/copyright
 
- -- Marco Balmer <marco@balmer.name>  Wed, 17 Sep 2014 12:11:46 +0200
+ -- Marco Balmer <marco@balmer.name>  Mon, 16 Feb 2015 15:23:30 +0100
 
 fadecut (0.1.3-1) unstable; urgency=low
 
